fix: footer title overflow

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@ footer .row .col-3 {
     border-bottom: 2px solid #24292e;
     line-height: 0.1em;
     margin-bottom: 2rem;
-    padding: 0 5rem;
 }
 
 .footer-title span { 
@@ -133,6 +132,12 @@ footer .row .col-3 {
 @media (max-width: 1220px) {
     .google-map {
         min-height: 580px;
+    }
+}
+
+@media (max-width: 400px) {
+    .footer-title span {
+        font-size: 1rem;
     }
 }
 
